<resources>
    <string name="app_name">Goods Viewer</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="page_title_detail">Details</string>
    <string name="page_title_comments">Comments</string>
    <string name="login_title">Login</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_enter">Enter</string>
    <string name="login_not_registered"><u>Not registered?</u></string>
    <string name="register_title">Registration</string>
    <string name="register_button">Register</string>
    <string name="drawer_list">List of goods</string>
    <string name="drawer_login">Login</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_logout">Log out</string>
    <string name="profile_hint_name">Name</string>
    <string name="profile_hint_surname">Surname</string>
    <string name="profile_button_save">Save</string>
    <string name="toast_exit">Tap "Back" one more time to exit</string>
    <string name="toast_register_success">Registration successful!</string>
    <string name="toast_register_error">Registration error!</string>
    <string name="toast_login_success">Welcome to Goods Viewer!</string>
    <string name="toast_login_error">Login error!</string>
    <string name="dialog_remove_image_message">Are you sure want to delete photo?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_comment_title">Post comment</string>
    <string name="dialog_comment_label">Comment:</string>
    <string name="dialog_send">Send</string>
    <string name="toast_comment_posted">Comment posted!</string>
    <string name="dialog_select_image_camera">Camera</string>
    <string name="dialog_select_iamge_gallery">Gallery</string>
</resources>
