<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/grid_32">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorBackground"
            android:padding="@dimen/grid_8"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_24"
                android:textStyle="bold"
                android:text="@string/dialog_comment_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_comment_label"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/grid_16"/>

            <EditText
                android:id="@+id/dialog_comment_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLight"
                android:padding="@dimen/grid_8"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_18"
                tools:text="@string/lorem"/>

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/dialog_comment_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:stepSize="1"
                android:progressTint="@android:color/white"
                tools:rating="3"
                android:layout_marginTop="@dimen/grid_16"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/grid_16">
            <TextView
                android:id="@+id/dialog_comment_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:layout_weight="1"
                style="@style/dialogButtonText"/>

            <TextView
                android:id="@+id/dialog_comment_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_send"
                android:layout_weight="1"
                style="@style/dialogButtonText"/>
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>